--- a/dev/sass/_tmpl.venue.scss
+++ b/dev/sass/_tmpl.venue.scss
@@ -138,6 +138,152 @@ $venue-vertical-padding: 50px;
 
 
 
+// Special Voidvenue
+.void-venue {
+	background: {
+		color: #fff;
+	}
+	border: {
+		bottom-width: 0px;
+	}
+
+	.lunch-fn-attend {
+		background: {
+			color: $agencycolor;
+		}
+
+		&:hover {
+			background-color: #FF1A59;
+			@include hoverrotate();
+		}
+	}
+
+	.lunch-venue-header {
+		color: $agencycolor;
+		font: {
+			family: Georgia;
+			style: italic;
+		}
+	}
+}
+
+
+
+
+// Venue Title
+
+.lunch-venue-title {
+	
+	font: {
+		size: 2.4em;
+	}
+
+	margin: {
+		top: 0;
+		bottom: 5px;
+	}
+
+	display: block;
+}
+
+
+
+
+
+
+
+
+// Create Lunch Venue
+
+.lunch-venue-create {
+	
+	@extend .clearfix;
+	
+	padding: {
+		top: 50px;
+		right: 60px;
+		bottom: 50px;
+		left: 60px;
+	}
+
+	border: {
+		width: 0px;
+		bottom-width: 0px;
+		style: solid;
+		color: #dedede;
+	}
+
+	.venue-title-input {
+		
+		margin: {
+			left:-10px;
+			top: 0px;
+		}
+
+		padding: 10px;
+
+		padding: {
+			bottom: 5px;
+		}
+
+		font: {
+			family: "bebas-neue";
+			size: 2.4em;
+		}
+		min-width: 450px;
+		background-color: #eee;
+		border: {
+			width: 1px;
+			style: dashed;
+			color: #ccc;
+		}
+	}
+
+	.venue-menu-input {
+
+		min-width: 450px;
+		margin: {
+			left:-10px;
+			top: 10px;
+		}
+		padding: {
+			left: 10px;
+			right: 10px;
+			top: 5px;
+			bottom: 5px;
+		};
+		
+		font: {
+			family: Georgia;
+			style: italic;
+		}
+
+		background-color: #eee;
+		border: {
+			width: 1px;
+			style: dashed;
+			color: #ccc;
+		}
+
+	}
+
+	.venue-title-input,
+	.venue-menu-input {
+		display: block;
+
+		&:focus {
+			outline: none;
+			border: {
+				style: solid;
+				color: #aaa;
+			
+			}
+		}
+	}
+}
+
+
+
 
 
 /* Collect all Medium Screen Styles here */
