--- a/dev/sass/_ui.buttons.scss
+++ b/dev/sass/_ui.buttons.scss
@@ -3,6 +3,27 @@
  * General Styles
  */
 
+
+
+@mixin hoverrotateStart( ){
+	-moz-transform: rotate(0deg);  /* FF3.5+ */
+       -o-transform: rotate(0deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(0deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(0deg);  /* IE9 */
+          transform: rotate(0deg);  
+}
+
+@mixin hoverrotate( ){
+	-moz-transform: rotate(360deg);  /* FF3.5+ */
+       -o-transform: rotate(360deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(360deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(360deg);  /* IE9 */
+          transform: rotate(360deg);  
+}
+
+
+
+
 .lunch-fn-attend, 
 .lunch-fn-quit,
 .lunch-fn-addvenue {
