--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="../static/css/screen.css">
+		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
 
 		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
@@ -20,10 +20,8 @@
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 		<!-- angular and socket.io -->
-		<script type="text/javascript" src="../static/js/vendor/angular.min.js"></script>
-		<script type="text/javascript" src="../static/js/vendor/angular-animate.min.js"></script>
-		<script type="text/javascript" src="../static/js/vendor/angular-route.min.js"></script>
-		<script type="text/javascript" src="../static/js/front.js"></script>
+		<script type="text/javascript" src="../static/js/libraries.js"></script>
+		<script type="text/javascript" src="../static/js/app.js"></script>
 
 	</head>
 
