--- a/templates/page.app.html
+++ b/templates/page.app.html
@@ -10,19 +10,19 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="../static/css/screen.css">
+		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
-
-		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
-		<script src="../static/js/vendor/jquery.js"></script>
-		<script src="../static/js/vendor/pure.js"></script>
-		<script src="../static/js/vendor/eventDispatcher.js"></script>
-		<script src="../static/js/vendor/timer.js"></script>
 
 		<!-- Type kit -->
 		<script type="text/javascript" src="//use.typekit.net/tjo7bse.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+
+		<script type="text/javascript" src="../static/js/libraries.js"></script>
+		<script type="text/javascript" src="../static/js/app.js"></script>
 	</head>
+
+
 
 	<body class="lunch-page-app">
 		
