changes manifesto page

--- a/dev/sass/_page.manifesto.scss
+++ b/dev/sass/_page.manifesto.scss
@@ -7,7 +7,7 @@
 
 	margin: 0;
  	
- 	background-image: url('/static/img/manifesto-bg.jpg');
+ 	background-image: url('../img/manifesto-bg.jpg');
  	background-position: center center;
  	background-size: cover;
  	background-attachment: fixed;
