--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1526,7 +1526,7 @@ h1 {
 /* line 6, ../../dev/sass/_page.manifesto.scss */
 .lunch-page-manifesto {
   margin: 0;
-  background-image: url("/static/img/manifesto-bg.jpg");
+  background-image: url("../img/manifesto-bg.jpg");
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
