--- a/templates/page.manifesto.html
+++ b/templates/page.manifesto.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="../static/css/screen.css">
+		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
 		
 		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
