--- a/dev/sass/_ui.header.scss
+++ b/dev/sass/_ui.header.scss
@@ -1,12 +1,20 @@
-/* Header */
+/*
+ * Lunchpad. Header/Nav
+ * @author Joachim Fröstl <jf@19h13.com>
+ */
 
 
 
-/* Mobile first */
 
-.lunch-apppage-head {
-	
-	z-index: 99;
+
+
+
+
+
+/* 
+ * Mobile first 
+ */
+.lunch-header {
 	
 	// Skin
 	background: {
@@ -14,19 +22,23 @@
 	}
 	color: white;
 
+
+	
+	// Logo
 	.lunch-logo {
+
+		// Box
 		height: 60px; // Overwrite Loginpage Styling
-		
 		margin: {
 			top: 0;
 			bottom: 0;
 		}
-
 		padding: {
 			top: 20px;
 			bottom: 20px;
 		}
-
+		
+		// Childs
 		img {
 			height: 100%;
 		}
@@ -35,96 +47,64 @@
 
 
 
-/* Medium sized Screen */
+/* 
+ * Medium sized Screens 
+ */
+@mixin lunch-header-screen-m() {
 
-@mixin lunch-apppage-head-screen-m() {
-
-	.lunch-apppage-head {
+	.lunch-header {
 		
-		text-align: right;
+		// Box
 		width: 38.2%;
-
+		padding: {
+			right: 80px;
+		}
+		@include box-sizing(border-box);
 		
-		// Positioning
-
+		// Position
 		position: fixed;
-
 		top: 0;
 		bottom: 0;
 		left: 0;
+		z-index: 99;
+
+		// Typography		
+		text-align: right;
 
 
-		.lunch-container {
-
+		
+		// Navigation Container
+		.lunch-nav-container {
 			float: right;
 			width: 300px;
 		}
-
-		.lunch-logo-container {
-
-			display: block;
-
-			text-align: right;
+		
 
 
-			border: {
-				width: 0px;
-				bottom-width: 0px;
-				style: solid;
-				color: white;
-			}
-		}
-
+		// Logo
 		.lunch-logo {
-			text-align: right;
+			
+			// Box
 			display: block;
 			height: 122px;
-			width: 260px;
-			float: right;
-			
-
+			width: auto;
 			padding: {
+				right: 0;
+				left: 0;
+				top: 0;
+				bottom: 0;
+			}
+			margin: {
 				top: 100px;
-				right: 80px;
-				left: 20px;
-				bottom: 40px;
+				left: auto;
+				right: 0;
+				bottom: 60px;
 			}
 
+			// Childs
+			text-align: right;
 			img {
 				height: auto;
-			}
-		}
-		
-		.lunch-user {
-			position: relative;
-		}
-
-		.lunch-user-image {
-			display: block;
-			position: absolute;
-			top: -28px;
-			right: 35px;
-
-		}
-
-		.lunch-user-name {
-			text-align: right;
-			line-height: 1em;
-			padding: {
-				left: 0;
-				top: 20px;
-				bottom: 15px;
-				right: 80px;
-				
-			}
-			font: {
-				size: 1.8em;
-				family: "bebas-neue", Arial;
-			}
-		}
-		.lunch-user-surname {
-			font: {
-				family: Georgia;
 			}
 		}
 	}
@@ -139,12 +119,62 @@
 
 
 /*
- * User
+ * Header User styles, mobile first
  */
-
-.lunch-user {
+.lunch-account {
 	text-align: center;
 }
+
+
+/* 
+ * Medium sized screens
+ */
+@mixin lunch-header-account-screen-m() {	
+	
+	// Account/User
+	.lunch-account {
+
+		// Box
+		margin: {
+			top: 20px;
+			bottom: 15px;
+		}
+
+		// Position
+		position: relative;
+	}
+	
+	// Avatar
+	.lunch-account-image {
+
+		// Box
+		display: block;
+
+		// Position
+		position: absolute;
+		bottom: -10px;
+		right: -55px;
+	}
+	
+	// Name of account
+	.lunch-account-name {
+		
+		// Box
+		padding: {
+			left: 0;
+			right: 0;
+		}
+		
+		// Typo
+		font: {
+			size: 1.8em;
+			family: "bebas-neue", Arial;
+		}
+		text-align: right;
+		line-height: 1em;
+	}
+}
+
 
 
 
@@ -157,33 +187,35 @@
 /* 
  * Nav Elements 
  */
-
 .lunch-nav {
 
-	text-align: center;
-
+	// Box
 	padding: {
 		top: 20px;
 		bottom: 20px;
 	}
+
+	// Typo
+	text-align: center;
 }
 
 
 
-/* Mixin for medium sized screens */
-
+/*
+ * Mixin for medium sized screens 
+ */
 @mixin lunch-nav-screen-m() {
 
 	.lunch-nav {
 
-		text-align: right;
-
+		// Box
 		padding: {
 			top: 0;
 			bottom: 0;
-			right: 80px;
-			left: 0;
 		}
+
+		// Typo
+		text-align: right;
 	}
 }
 
@@ -195,22 +227,24 @@
 
 
 
-/* Single Nav Element */
-
+/* 
+ * Single Nav Element 
+ */
 .lunch-nav-elem {
 	
-	font: {
-		family: Georgia;
-	}
+	// Box
+	display: inline;
 	padding: {
 		left: 10px;
 		right: 10px;
 	}
-
-	display: inline;
-
+	
+	// Skin
 	color: white;
 	text-decoration: none;
+	font: {
+		family: Georgia;
+	}
 	
 	@include transition( color 1000ms );
 
@@ -222,13 +256,15 @@
 
 
 
-/* Mixin for medium sized screens */
-
+/* 
+ * Mixin for medium sized screens 
+ */
 @mixin lunch-nav-elem-screen-m() {
+	
 	.lunch-nav-elem {
 		
+		// Box
 		display: block;
-
 		padding: {
 			left: 0;
 			right: 0;
@@ -246,28 +282,33 @@
 
 
 
+/* 
+ * Collection of all Medium Screen Style Mixins 
+ */
+@mixin lunch-header-mixins-screen-m() {
 
-.lunch-logo-container {
-	@extend .clearfix;
-}
-
-
-
-
-/* Collect all Medium Screen Styles here */
-
-@mixin lunch-apppage-header-screen-m() {
-
-	@include lunch-apppage-head-screen-m;
+	@include lunch-header-screen-m;
 	@include lunch-nav-screen-m;
 	@include lunch-nav-elem-screen-m;
-
+	@include lunch-header-account-screen-m;
 }
 
-// Apply
-
+/* 
+ * Apply Mediaquery Mixins
+ */
 @media screen and (min-width: 960px) {
 
-	@include lunch-apppage-header-screen-m;
-
+	@include lunch-header-mixins-screen-m;
 }
+
+/* 
+ * IE fixes 
+ */
+.lt-ie9 {
+	@include lunch-header-mixins-screen-m;
+}
+
+/* 
+ * No JS 
+ */
+.no-js {}
