--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -1,5 +1,13 @@
 /*
- * Global Variables
+ * lunchpad. Global Variables
+ * @author Joachim Fröstl <jf@19h13.com>
  */ 
 
-$agencycolor: #ff0046;
+$lunch-color-red: #FF0046;
+$lunch-color-red-dark: #C90037;
+$lunch-color-blu: #00B9E7;
+$lunch-color-blu-dark: #00AEDA;
+
+
+$lunch-time-over: 200ms;
+$lunch-time-out: 750ms;
