--- a/dev/sass/_page.manifesto.scss
+++ b/dev/sass/_page.manifesto.scss
@@ -35,7 +35,7 @@
 
  	a{
  		text-decoration: none;
- 		color: $agencycolor;
+ 		color: $lunch-color-red;
 
  		@include transition( color 1000ms );
 
@@ -53,7 +53,7 @@
  			@include transition( color 1000ms );
 
 			&:hover{
-				color: $agencycolor;
+				color: $lunch-color-red;
 				@include transition( color 200ms );
 			}
  		}
