--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -9,5 +9,12 @@ $lunch-color-blu: #00B9E7;
 $lunch-color-blu-dark: #00AEDA;
 
 
+// Timer
 $lunch-time-over: 200ms;
 $lunch-time-out: 750ms;
+
+
+// Grid
+$lunch-grid-break-s: 680px;
+$lunch-grid-break-m: 960px;
+
