--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -14,7 +14,7 @@
 
 
 	<div class="lunch-venue-filter">
-		<input type="text" class="lunch-venue-filter-input" placeholder="Filter" ng-model="searchInput.name">
+		<input type="text" class="lunch-venue-filter-input" placeholder="Filter Venues" ng-model="searchInput.name">
 	</div>
 
 
