--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -8,6 +8,7 @@
 @import "compass/css3/transform";
 @import "compass/css3/transition";
 @import "compass/css3/box-sizing";
+@import "compass/css3/border-radius";
 
 // Imported
 @import "vendor.normalize";
